# arruma-dir

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MODELO_DE_ORGANIZACAO.md  ORGANIZA_PROJETOS.md
scripts/: build_exe.ps1  organiza_projetos.py
src/arruma_dir/: __init__.py  __main__.py  app.py  cli.py  gui.py  gui_charts.py  hardware.py  logging_utils.py  organizer.py  project_cli.py  project_organizer.py  safety.py
tests/: test_entry_points.py  test_gui_behavior.py  test_gui_charts.py  test_logging_utils.py  test_organizer.py  test_project_organizer.py  test_safety.py
